# c2rust

./: .gitignore  Cargo.toml  README.md  build.rs  rustfmt.toml
ast-importer/src/cfg/: multiples.rs
ast-importer/src/rust_ast/: comment_store.rs
build-support/: Cargo.toml
build-support/src/: lib.rs
scripts/: build_cross_checks.py  build_translator.py  common.py  test_cross_checks.py  test_translator.py
src/: clang_ast.rs  convert_type.rs  lib.rs  loops.rs  main.rs  with_stmts.rs
src/c_ast/: conversion.rs  iterators.rs  mod.rs  print.rs
src/cfg/: loops.rs  mod.rs  multiples.rs  relooper.rs  structures.rs
src/rust_ast/: comment_store.rs  mod.rs  traverse.rs
tests/: arrays.rs
